cmake_minimum_required(VERSION 3.25)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(0401_1 MeiTuan_0401/0401_1.cpp)
add_executable(0401_2 MeiTuan_0401/0401_2.cpp)
add_executable(0408_1 MeiTuan_0408/0408_1.cpp)
add_executable(0408_2 MeiTuan_0408/0408_2.cpp)
add_executable(0408_3 MeiTuan_0408/0408_3.cpp)
add_executable(0408_4 MeiTuan_0408/0408_4.cpp)
add_executable(Listnode Template/Listnode.cpp)
add_executable(MMM_problem "Template/MMM_problem.cpp")
add_executable(Quick_sort Template/Quick_sort.cpp)
add_executable(Tree Template/Tree.cpp)
add_executable(y_0408_1 MeiTuan_0408/y_0408_1.cpp)
add_executable(y_0408_2 MeiTuan_0408/y_0408_2.cpp)
add_executable(y_0408_3 MeiTuan_0408/y_0408_3.cpp)
add_executable(y_0408_4 MeiTuan_0408/y_0408_4.cpp)
add_executable(four4 Yanyan/Nowcode/four4.cpp)
add_executable(three4 Yanyan/Nowcode/three4.cpp)
add_executable(tree Yanyan/Nowcode/tree.cpp)
add_executable(choulou Yanyan/choulou.cpp)
add_executable(mofa Yanyan/mofa.cpp)
add_executable(shoucang Yanyan/shoucang.cpp)
add_executable(suanshu Yanyan/suanshu.cpp)

add_executable(yitu_0405_1 "Yitu 4.5/yitu_0405_1.cpp")
add_executable(yitu_0405_2 "Yitu 4.5/yitu_0405_2.cpp")
add_executable(yitu_0405_3 "Yitu 4.5/yitu_0405_3.cpp")
add_executable(yitu_0405_4 "Yitu 4.5/yitu_0405_4.cpp")
add_executable(yitu_0405_5 "Yitu 4.5/yitu_0405_5.cpp")
add_executable(offer.17 Offer/offer.17.cpp)
add_executable(offer.20 Offer/offer.20.cpp)
add_executable(Prime_In_Diagonal WC_340/Prime_In_Diagonal.cpp)
add_executable(serialize Yanyan/Nowcode/serialize.cpp)
add_executable(x_1 MeiTuan_0415/x_0415_1.cpp)
add_executable(x_2 MeiTuan_0415/x_0415_2.cpp)
add_executable(x_3 MeiTuan_0415/x_0515_3.cpp)
add_executable(x_4 MeiTuan_0415/x_0415_4.cpp)
add_executable(y_0415_1 MeiTuan_0415/y_0415_1.cpp)
add_executable(y_0415_2 MeiTuan_0415/y_0415_2.cpp)
add_executable(y_0415_3 MeiTuan_0415/y_0415_3.cpp)
add_executable(y_0415_4 MeiTuan_0415/y_0415_4.cpp)
add_executable(x_0419_1 SHEIN_0419/x_0419_1.cpp)
add_executable(x_0419_2 SHEIN_0419/x_0419_2.cpp)
add_executable(01 XieChen_9.21/01.cpp)
add_executable(02 XieChen_9.21/02.cpp)
add_executable(03 XieChen_9.21/03.cpp)
add_executable(04 XieChen_9.21/04.cpp)