cmake_minimum_required(VERSION 3.25)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(0401_1 Alex/MeiTuan_0401/0401_1.cpp)
add_executable(0401_2 Alex/MeiTuan_0401/0401_2.cpp)
add_executable(0408_1 Alex/MeiTuan_0408/0408_1.cpp)
add_executable(0408_2 Alex/MeiTuan_0408/0408_2.cpp)
add_executable(0408_3 Alex/MeiTuan_0408/0408_3.cpp)
add_executable(0408_4 Alex/MeiTuan_0408/0408_4.cpp)
add_executable(Listnode Alex/Template/Listnode.cpp)
add_executable(MMM_problem "Alex/Template/MMM_problem.cpp")
add_executable(Quick_sort Alex/Template/Quick_sort.cpp)
add_executable(Tree Alex/Template/Tree.cpp)
add_executable(y_0408_1 Alex/MeiTuan_0408/y_0408_1.cpp)
add_executable(y_0408_2 Alex/MeiTuan_0408/y_0408_2.cpp)
add_executable(y_0408_3 Alex/MeiTuan_0408/y_0408_3.cpp)
add_executable(y_0408_4 Alex/MeiTuan_0408/y_0408_4.cpp)
add_executable(four4 Yanyan/Nowcode/four4.cpp)
add_executable(three4 Yanyan/Nowcode/three4.cpp)
add_executable(tree Yanyan/Nowcode/tree.cpp)
add_executable(choulou Yanyan/choulou.cpp)
add_executable(mofa Yanyan/mofa.cpp)
add_executable(shoucang Yanyan/shoucang.cpp)
add_executable(suanshu Yanyan/suanshu.cpp)

add_executable(yitu_0405_1 "Alex/Yitu 4.5/yitu_0405_1.cpp")
add_executable(yitu_0405_2 "Alex/Yitu 4.5/yitu_0405_2.cpp")
add_executable(yitu_0405_3 "Alex/Yitu 4.5/yitu_0405_3.cpp")
add_executable(yitu_0405_4 "Alex/Yitu 4.5/yitu_0405_4.cpp")
add_executable(yitu_0405_5 "Alex/Yitu 4.5/yitu_0405_5.cpp")
add_executable(offer.17 Alex/Offer/offer.17.cpp)
add_executable(offer.20 Alex/Offer/offer.20.cpp)
add_executable(Prime_In_Diagonal WC_340/Prime_In_Diagonal.cpp)
add_executable(serialize Yanyan/Nowcode/serialize.cpp)
add_executable(x_1 Alex/MeiTuan_0415/x_0415_1.cpp)
add_executable(x_2 Alex/MeiTuan_0415/x_0415_2.cpp)
add_executable(x_3 Alex/MeiTuan_0415/x_0515_3.cpp)
add_executable(x_4 Alex/MeiTuan_0415/x_0415_4.cpp)
add_executable(y_0415_1 Alex/MeiTuan_0415/y_0415_1.cpp)
add_executable(y_0415_2 Alex/MeiTuan_0415/y_0415_2.cpp)
add_executable(y_0415_3 Alex/MeiTuan_0415/y_0415_3.cpp)
add_executable(y_0415_4 Alex/MeiTuan_0415/y_0415_4.cpp)
add_executable(x_0419_1 Alex/SHEIN_0419/x_0419_1.cpp)
add_executable(x_0419_2 Alex/SHEIN_0419/x_0419_2.cpp)
add_executable(01 Alex/MeiTuan_0923/MeiTuan_0923_01.cpp)
add_executable(02 Alex/MeiTuan_0923/MeiTuan_0923_02.cpp)
add_executable(03 Alex/XieChen_9.21/03.cpp)
add_executable(04 Alex/XieChen_9.21/04.cpp)

add_executable(MeiTuan_0923_03 Alex/MeiTuan_0923/MeiTuan_0923_03.cpp)
add_executable(Netease_0923_01 Alex/Netease_0923/Netease_0923_01.cpp)
add_executable(Netease_0923_02 Alex/Netease_0923/Netease_0923_02.cpp)
add_executable(Netease_0923_03 Alex/Netease_0923/Netease_0923_03.cpp)
add_executable(Netease_0923_04 Alex/Netease_0923/Netease_0923_04.cpp)